fix alignments
try again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1006,6 +1006,12 @@ section {
   background: #fff;
 }
 
+.team .row {
+  margin-left: auto;
+  margin-right: auto;
+  display: table;
+}
+
 .doctors .member {
   position: relative;
   box-shadow: 0px 2px 15px rgba(44, 73, 100, 0.08);
@@ -1320,6 +1326,18 @@ section {
   font-size: 14px;
   color: #4b7dab;
 }
+
+.resources .list {
+  margin-left: auto;
+  margin-right: auto;
+  display: table;
+}
+
+.resources ul {
+  text-align: left;
+}
+
+
 
 @-webkit-keyframes animate-loading {
   0% {
